Added body text

--- a/index.html
+++ b/index.html
@@ -2,9 +2,90 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Grid Responsive Site</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+                               <!--header-->
+<header>
+    <div class="img"></div>
+    <div class="headerText">
+        <h1>Welcome to Acme Web Solutions</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus doloribus eius ipsum magni nobis numquam
+            placeat quae quasi quo, rem!</p>
+        <a class="" href="#s2">Read More</a>
+    </div>
+</header>
+<main>
+                              <!--секция 1-->
+    <section id="s1">
+        <h2>Web & Application Development</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus asperiores assumenda, autem corporis cum
+            dignissimos doloremque, dolores eligendi eveniet ex fugit nesciunt officiis omnis praesentium quam sapiente
+            sint. Ad animi consequatur culpa distinctio id, iure laudantium, modi natus nesciunt obcaecati officiis
+            pariatur quae quaerat quisquam reiciendis reprehenderit, voluptatem. Molestias, omnis!</p>
+    </section>
+                             <!--секция 2-->
+    <section id="s2">
+        <article class="card">
+            <div class="imageCard">
+                <img src="https://static.pexels.com/photos/574077/pexels-photo-574077.jpeg" alt="work space">
+            </div>
+            <div class="infoWrapper">
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi magni perspiciatis tempore. Assumenda
+                    beatae cupiditate illum obcaecati odit tempora ut?</p>
+            </div>
+        </article>
+        <article class="card">
+            <div class="imageCard">
+                <img src="https://static.pexels.com/photos/261628/pexels-photo-261628.jpeg"
+                     alt="work space">
+            </div>
+            <div class="infoWrapper">
+                <h3>Mobile Applications</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi magni perspiciatis tempore. Assumenda
+                    beatae cupiditate illum obcaecati odit tempora ut?</p>
+            </div>
+        </article>
+        <article class="card">
+            <div class="imageCard">
+                <img src="https://static.pexels.com/photos/265087/pexels-photo-265087.jpeg"
+                     alt="work space">
+            </div>
+            <div class="imageCard">
+                <h3>Tech Marketing</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi magni perspiciatis tempore. Assumenda
+                    beatae cupiditate illum obcaecati odit tempora ut?</p>
+            </div>
+        </article>
+    </section>
+                           <!--секция 3-->
+    <section id="s3">
+        <h2>We handle all of your digital needs</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci error inventore laborum nostrum numquam
+            obcaecati odit optio quo sunt velit.</p>
+    </section>
+                           <!--секция 4-->
+    <section id="s4">
+        <div>
+            <h2>Contact Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium atque cum harum ipsa labore.</p>
+            <p>contact@acmewebsolutions.test</p>
+        </div>
+        <div>
+            <h2>About Our Company</h2>
+            <p>A autem blanditiis doloremque expedita molestiae natus necessitatibus nobis praesentium quasi quibusdam
+                rerum sapiente, soluta sunt suscipit tempore tenetur veniam?</p>
+        </div>
+    </section>
 
+</main>
+<footer>
+    <div>Acme Web Solutions</div>
+    <div>Project By <a href="http://traversymedia.com" target="_blank">Traversy Media</a></div>
+
+</footer>
 </body>
 </html>
